src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_autocomplete_popup_with_function_signatures.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ──────────────────────────────────────────────────────────────────────╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ╭ Suggestions ───────────────╮                                               │"
"│ │  select(expr)  [function]  │                                               │"
"│ │  sort          [function]  │                                               │"
"│ │  sort_by(expr) [function]  │                                               │"
"╰─╰────────────────────────────╯────────────────────────────────── L1-4/4 (0%) ╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
