src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_help_popup.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"│{                                                                             │"
"│  "t╭ Keyboard Shortcuts ────────────────────────────────────────────────╮    │"
"│}   │[1:Global]   2:Input   3:Result   4:History   5:AI   6:Search   7:Sn█    │"
"│    │────────────────────────────────────────────────────────────────────█    │"
"│    │                                                                    █    │"
"│    │     F1 or ?        Toggle this help                                █    │"
"│    │     Ctrl+A         Toggle AI assistant                             █    │"
"│    │     Ctrl+G         Focus AI chat input                             █    │"
"│    │     Ctrl+S         Open snippets manager                           █    │"
"│    │     Ctrl+C         Quit without output                             █    │"
"│    │     Enter          Output filtered JSON and exit                   █    │"
"│    │     Ctrl+Q         Output query string only and exit               █    │"
"│    │     Shift+Tab      Switch focus (Input / Results)                  █    │"
"│    │     Ctrl+T         Switch focus (Input / Results)                  ║    │"
"│    │     Ctrl+I         Toggle function tooltip                         ║    │"
"│    │     Ctrl+Y         Copy focused pane (query or results)            ║    │"
"│    │     Ctrl+O         Copy results from any focus                     ║    │"
"│    │     Ctrl+W         Save result to file                             ║    │"
"╰────│     q              Quit (in Normal mode or Results pane)           ║────╯"
"╭ Que│                                                                    ║ant ╮"
"│    ╰───── 1-7 Jump • Tab Next • h/l Switch • j/k Scroll • q Close ──────╯    │"
"╰l+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hist╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
