src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_help_popup_with_ai_keybindings.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"┌ Obj┌ Keyboard Shortcuts ────────────────────────────────────────────────┐────┐"
"│{   │  0/^            Jump to left edge                                  │    │"
"│  "t│  $              Jump to right edge                                 │    │"
"│}   │  g/Home         Jump to top                                        │    │"
"│    │  G/End          Jump to bottom                                     │    │"
"│    │  Ctrl+D/U       Half page down/up                                  │    │"
"│    │  PageDown/Up    Half page down/up                                  │    │"
"│    │                                                                    │    │"
"│    │  ── SEARCH IN RESULTS ──                                           │    │"
"│    │  Ctrl+F         Open search (from any pane)                        │    │"
"│    │  /              Open search (from Results pane)                    │    │"
"│    │  Enter          Confirm search                                     │    │"
"│    │  n/Enter        Next match                                         │    │"
"│    │  N/Shift+Enter  Previous match                                     │    │"
"│    │  Ctrl+F or /    Re-enter edit mode                                 │    │"
"│    │  Esc            Close search                                       │    │"
"│    │                                                                    │    │"
"│    │  ── HISTORY POPUP ──                                               │    │"
"│    │  Up/Down        Navigate entries                                   │    │"
"└────│  Type           Fuzzy search filter                                │────┘"
"┌ Que│  Enter/Tab      Select entry and close                             │ant ┐"
"│    │  Esc            Close without selecting                            │    │"
"└────│                                                                    │────┘"
" F1: └────────────────────────────────────────────────────────────────────┘tory "
