src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_help_popup_with_ai_tab.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"│{                                                                             │"
"│  "t╭ Keyboard Shortcuts ────────────────────────────────────────────────╮    │"
"│}   │1:Global   2:Input   3:Result   4:History   [5:AI]   6:Search   7:Sn│    │"
"│    │────────────────────────────────────────────────────────────────────│    │"
"│    │                                                                    │    │"
"│    │     Ctrl+A         Show / hide AI assistant                        │    │"
"│    │     Ctrl+G         Focus the chat input (opens popup if hidden) /  │    │"
"│    │     Type + Enter   Ask a question about the query or data          │    │"
"│    │     Esc            Back to the query box (popup stays open)        │    │"
"│    │     Ctrl+L         Clear the conversation                          │    │"
"│    │     Alt+1-5        Apply AI suggestion (direct)                    │    │"
"│    │     Alt+↑↓/j/k     Navigate suggestions                            │    │"
"│    │     Enter          Apply selected suggestion (after Alt+↑↓)        │    │"
"│    │     ↑↓ / PgUp PgDn Scroll the conversation                         │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"│    │                                                                    │    │"
"╰────│                                                                    │────╯"
"╭ Que│                                                                    │ant ╮"
"│    ╰───── 1-7 Jump • Tab Next • h/l Switch • j/k Scroll • q Close ──────╯    │"
"╰l+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hist╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
