src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_history_popup.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ──────────────────────────────────────────────────────────────────────╮"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╭ History (3/3) ───────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│   .name                                                                      │"
"│   .age                                                                       │"
"│ ▌ .users[]                                                               [✕] │"
"│                                                                              │"
"╰────────────────── Enter Select • Ctrl+D Delete • Esc Close ──────────────────╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
