src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_history_popup_no_matches.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╭ History (0/1) ───────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│  No matches                                                                  │"
"│                                                                              │"
"╰────────────────── Enter Select • Ctrl+D Delete • Esc Close ──────────────────╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│xyz                                                                           │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
