src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_history_popup_scrolled_bottom.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ History (20/20) ─────────────────────────────────────────────────────────────╮"
"│                                                                              ║"
"│   .query05                                                                   ║"
"│   .query06                                                                   ║"
"│   .query07                                                                   ║"
"│   .query08                                                                   █"
"│   .query09                                                                   █"
"│   .query10                                                                   █"
"│   .query11                                                                   █"
"│   .query12                                                                   █"
"│   .query13                                                                   █"
"│   .query14                                                                   █"
"│   .query15                                                                   █"
"│   .query16                                                                   █"
"│   .query17                                                                   █"
"│   .query18                                                                   █"
"╰────────────────── Enter Select • Ctrl+D Delete • Esc Close ──────────────────╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰───────── Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R History ─────────╯"
" F1 Help • Shift+Tab Navigate Results • Ctrl+S Snippets • Ctrl+F Search • Ctrl+P"
