src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_history_popup_scrolled_middle.snap
---
source: src/app/app_render_tests/popup_tests.rs
expression: output
---
"╭ History (20/20) ─────────────────────────────────────────────────────────────╮"
"│                                                                              ║"
"│ ▌ .entry03                                                               [✕] ║"
"│   .entry04                                                                   █"
"│   .entry05                                                                   █"
"│   .entry06                                                                   █"
"│   .entry07                                                                   █"
"│   .entry08                                                                   █"
"│   .entry09                                                                   █"
"│   .entry10                                                                   █"
"│   .entry11                                                                   █"
"│   .entry12                                                                   █"
"│   .entry13                                                                   █"
"│   .entry14                                                                   █"
"│   .entry15                                                                   █"
"│   .entry16                                                                   ║"
"╰────────────────── Enter Select • Ctrl+D Delete • Esc Close ──────────────────╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
