src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_history_popup_with_search.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 38
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╭ History (1/3) ───────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│ ▌ .name                                                                  [✕] │"
"│                                                                              │"
"╰────────────────── Enter Select • Ctrl+D Delete • Esc Close ──────────────────╯"
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│na                                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰l+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hist╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
