src/app/app_render_tests/snapshots/jiq__app__app_render_tests__popup_tests__snapshot_input_border_hint_disabled_on_function.snap
---
source: src/app/app_render_tests/popup_tests.rs
assertion_line: 235
expression: output
---
"╭ Object ───────────────────────────────────────────────────────── L1-4/4 (0%) ╮"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query [INSERT] ──────────────────────── Ctrl+I Tooltip • Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰l+T Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hist╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy R"
